enable AggressiveOpts by default